{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 208,
  "lineage": "92002934-2e83-0ef0-3c0f-65ce8fbe5688",
  "resources": [
    {
      "module": "module.nic",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-jenkins/providers/Microsoft.Network/networkInterfaces/jenkins-nic",
            "internal_domain_name_suffix": "eaicajoacikejdtry3zh4zi55a.syx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.0.100",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-jenkins/providers/Microsoft.Network/publicIPAddresses/hh-jenkins-pip",
                "subnet_id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-jenkins/providers/Microsoft.Network/virtualNetworks/jenkins-VNet01/subnets/jenkins-Subnet01"
              }
            ],
            "location": "koreacentral",
            "name": "jenkins-nic",
            "private_ip_address": "10.0.0.100",
            "private_ip_addresses": [
              "10.0.0.100"
            ],
            "resource_group_name": "test-jenkins"
          },
          "dependencies": [
            "module.pip.azurerm_public_ip.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule",
            "module.vnet.azurerm_subnet.tfmodule",
            "module.vnet.azurerm_virtual_network.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-jenkins/providers/Microsoft.Network/networkSecurityGroups/jenkins-NSG01",
            "location": "koreacentral",
            "name": "jenkins-NSG01",
            "resource_group_name": "test-jenkins",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-jenkins/providers/Microsoft.Network/networkSecurityGroups/jenkins-NSG01/securityRules/port-tcp-22",
            "name": "port-tcp-22",
            "network_security_group_name": "jenkins-NSG01",
            "priority": 100,
            "protocol": "tcp",
            "resource_group_name": "test-jenkins",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nsg.azurerm_network_security_group.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-jenkins/providers/Microsoft.Network/networkSecurityGroups/jenkins-NSG01/securityRules/port-tcp-80",
            "name": "port-tcp-80",
            "network_security_group_name": "jenkins-NSG01",
            "priority": 110,
            "protocol": "tcp",
            "resource_group_name": "test-jenkins",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nsg.azurerm_network_security_group.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-jenkins/providers/Microsoft.Network/networkSecurityGroups/jenkins-NSG01/securityRules/8080-Jenkins",
            "name": "8080-Jenkins",
            "network_security_group_name": "jenkins-NSG01",
            "priority": 120,
            "protocol": "tcp",
            "resource_group_name": "test-jenkins",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nsg.azurerm_network_security_group.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_subnet_set",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-jenkins/providers/Microsoft.Network/virtualNetworks/jenkins-VNet01/subnets/jenkins-Subnet01",
            "network_security_group_id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-jenkins/providers/Microsoft.Network/networkSecurityGroups/jenkins-NSG01",
            "subnet_id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-jenkins/providers/Microsoft.Network/virtualNetworks/jenkins-VNet01/subnets/jenkins-Subnet01"
          },
          "dependencies": [
            "module.nsg.azurerm_network_security_group.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule",
            "module.vnet.azurerm_subnet.tfmodule",
            "module.vnet.azurerm_virtual_network.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.pip",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "hh-jenkins-pip",
            "fqdn": "hh-jenkins-pip.koreacentral.cloudapp.azure.com",
            "id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-jenkins/providers/Microsoft.Network/publicIPAddresses/hh-jenkins-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.200.201.244",
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "hh-jenkins-pip",
            "resource_group_name": "test-jenkins",
            "sku": "Standard"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/16",
            "address_prefixes": [
              "10.0.0.0/16"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-jenkins/providers/Microsoft.Network/virtualNetworks/jenkins-VNet01/subnets/jenkins-Subnet01",
            "name": "jenkins-Subnet01",
            "resource_group_name": "test-jenkins",
            "virtual_network_name": "jenkins-VNet01"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.tfmodule",
            "module.vnet.azurerm_virtual_network.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/8"
            ],
            "guid": "25201020-12c0-4414-8e71-c7727f651ff8",
            "id": "/subscriptions/9c630913-4954-47b2-bc89-b71d9598a101/resourceGroups/test-jenkins/providers/Microsoft.Network/virtualNetworks/jenkins-VNet01",
            "location": "koreacentral",
            "name": "jenkins-VNet01",
            "resource_group_name": "test-jenkins",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        }
      ]
    }
  ]
}